fix: mongo persistence json to bson
